# workflow

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
core/include/: Foo.h
core/src/: CMakeLists.txt  Foo.cpp
test/src/: CMakeLists.txt  Foo.cpp
